--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "site-lisp/emacs-which-key"]
 	path = site-lisp/emacs-which-key
 	url = https://github.com/justbur/emacs-which-key.git
+[submodule "site-lisp/git-modes"]
+	path = site-lisp/git-modes
+	url = https://github.com/magit/git-modes.git
