--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "site-lisp/git-modes"]
 	path = site-lisp/git-modes
 	url = https://github.com/magit/git-modes.git
+[submodule "site-lisp/symbol-overlay"]
+	path = site-lisp/symbol-overlay
+	url = https://github.com/wolray/symbol-overlay.git
