--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "site-lisp/avy"]
 	path = site-lisp/avy
 	url = https://github.com/abo-abo/avy.git
+[submodule "site-lisp/editorconfig-emacs"]
+	path = site-lisp/editorconfig-emacs
+	url = https://github.com/editorconfig/editorconfig-emacs.git
