add eslint checker for flymake

--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,9 @@
 [submodule "site-lisp/emmet-mode"]
 	path = site-lisp/emmet-mode
 	url = https://github.com/smihica/emmet-mode.git
+[submodule "site-lisp/flymake-eslint"]
+	path = site-lisp/flymake-eslint
+	url = https://github.com/orzechowskid/flymake-eslint.git
+[submodule "site-lisp/eslint-disable-rule"]
+	path = site-lisp/eslint-disable-rule
+	url = https://github.com/DamienCassou/eslint-disable-rule.git
