--- a/.gitmodules
+++ b/.gitmodules
@@ -172,3 +172,6 @@
 [submodule "site-lisp/ace-window"]
 	path = site-lisp/ace-window
 	url = https://github.com/abo-abo/ace-window.git
+[submodule "site-lisp/markdown-mode"]
+	path = site-lisp/markdown-mode
+	url = https://github.com/jrblevin/markdown-mode.git
