update rime config

--- a/rime/default.custom.yaml
+++ b/rime/default.custom.yaml
@@ -1,5 +1,12 @@
 patch:
   schema_list:
     - schema: luna_pinyin_simp
+    - schema: luna_pinyin
+    - schema: luna_pinyin_fluency
+    - schema: bopomofo
+    - schema: bopomofo_tw
+    - schema: cangjie5
+    - schema: stroke
+    - schema: terra_pinyin
   menu:
     page_size: 10
