--- a/.gitmodules
+++ b/.gitmodules
@@ -214,3 +214,6 @@
 [submodule "site-lisp/emacs-db"]
 	path = site-lisp/emacs-db
 	url = https://github.com/nicferrier/emacs-db.git
+[submodule "site-lisp/edit-indirect"]
+	path = site-lisp/edit-indirect
+	url = https://github.com/Fanael/edit-indirect.git
