--- a/.gitmodules
+++ b/.gitmodules
@@ -217,3 +217,6 @@
 [submodule "site-lisp/edit-indirect"]
 	path = site-lisp/edit-indirect
 	url = https://github.com/Fanael/edit-indirect.git
+[submodule "site-lisp/llama"]
+	path = site-lisp/llama
+	url = https://github.com/tarsius/llama.git
