--- a/.gitmodules
+++ b/.gitmodules
@@ -217,3 +217,6 @@
 [submodule "site-lisp/meson-mode"]
 	path = site-lisp/meson-mode
 	url = https://github.com/wentasah/meson-mode.git
+[submodule "site-lisp/cond-let"]
+	path = site-lisp/cond-let
+	url = https://github.com/tarsius/cond-let.git
